# slinger

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  install-requirements.sh  requirements.txt
data/: how-to-play.kra  times.json
src/: CMakeLists.txt  body_builder.cpp  body_builder.h  checkpoint_manager.cpp  checkpoint_manager.h  illustrator.cpp  illustrator.h  input_manager.cpp  input_manager.h  main.cpp  map_maker.cpp  map_maker.h  misc_components.h  physics.cpp  physics.h
src/lib/: CMakeLists.txt  animation.cpp  animation.h  body_builder.cpp  body_builder.h  checkpoint_manager.cpp  checkpoint_manager.h  events.h  illustrator.cpp  illustrator.h  input_manager.cpp  input_manager.h  misc_components.h  physics.cpp  physics.h
src/lib/map_maker/: map_maker.cpp  map_maker.h  path_builder.cpp  path_builder.h  regexer.cpp  regexer.h
src/lib/scenes/: level_scene.cpp  level_scene.h  main_menu_scene.cpp  main_menu_scene.h  scene.h  scene_manager.cpp  scene_manager.h  tutorial_scene.cpp  tutorial_scene.h
src/tests/: CMakeLists.txt  pathbuilder.t.cpp  regexer.t.cpp
